# mdPdf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  markdown2pdfrc.example.toml  mdprc.example.toml
assets/: help.txt
src/lib/: assets.rs  config.rs  fonts.rs  lib.rs  markdown.rs  markdown_lexer.rs  pdf.rs  styling.rs
src/lib/test_data/: nt.md
