[package]
name = "mpd"
version = "0.1.0"
edition = "2021"
authors = ["Ismael Sh <me@theiskaa.com>"]
description = "Create PDF with Markdown files (a md to pdf transpiler)"
readme = "README.md"
license = "MIT"
keywords = ["md", "markdown", "pdf"]
repository = "https://github.com/theiskaa/mdPdf"

[lib]
name = "mdp"
path = "src/lib/lib.rs"

[[bin]]
name = "mdp"
path = "src/bin/main.rs"

[dependencies]
genpdf = "0.2.0"
thiserror = "1.0.63"
clap = { version = "4.0", features = ["derive"] }
